<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Money Balance</string>
    <string name="nav_header_subtitle">marg@hoho.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="app_name">Money Balance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="requiredHint">Required</string>

    <string name="errorMessage">qwer</string>
    <string name="unknownError">unknown</string>
    <string name="profile">Profile</string>
    <string name="addOperationFragmentLabel">Add Operation</string>
    <string name="menu_categories">Categories</string>
    <string name="add">add</string>
    <string name="done">Done</string>
    <string name="menu_balance">Balance</string>
    <string name="editCategoryEmptyName">Please, type in categoryList name</string>
    <string name="remove">remove</string>
    <string name="bt_ok">ok</string>
    <string name="bt_cancel">cancel</string>
    <string name="categoryListPageExpenceCategories">expence</string>
    <string name="categoryListPageIncomeCategories">income</string>
    <string name="menu_accounts">Accounts</string>
    <string name="editOperationEmptyAccount">Account can\'t be empty</string>
    <string name="editOperationEmptyAmount">Amount can\'t be empty</string>
    <string name="editOperationEmptyCategory">Please, pick a category</string>
</resources>
